# darkdm

./: .gitignore  .memory-project  AGENTS.md  README.md  feature_list.json  index.html  install.sh  package-lock.json  package.json  progress.md  test-progress.sh
docs/: LOGGING.md  NETFLIX.md  tls_interception.md
extension/: background.js  content.css  content.js  content_main.js  hook.js  manifest.json
extension/popup/: popup.css  popup.html  popup.js
native-host/: Cargo.toml  com.darkdm.manager.json
native-host/src/: downloader.rs  log.rs  main.rs  proxy.rs  server.rs
openspec/changes/darkdm-video-capture/: design.md  proposal.md  tasks.md
openspec/changes/darkdm-video-capture/specs/buffer-capture/: spec.md
openspec/changes/darkdm-video-capture/specs/download-management/: spec.md
openspec/changes/http-server-native-host/: design.md  proposal.md  tasks.md
openspec/changes/native-cli/: .openspec.yaml  design.md  proposal.md  tasks.md
scripts/: darkdm-capture  darkdm-debug  darkdm-mediafire  darkdm-vivaldi  watch-downloads.sh
src/: App.svelte
src-tauri/: CLI.md  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/downloader/: auto_rename.rs  content_type.rs  disk_space.rs  download_engine.rs  hls_handler.rs  logger.rs  mod.rs  page_analyzer.rs  piece.rs  piece_manager.rs  probe.rs  progress.rs  transacted_io.rs
src-tauri/src/downloader/plugins/: extractor.rs  mediafire.rs  mod.rs  netflix.rs  registry.rs  youtube.rs
src-tauri/src/downloader/stages/: mod.rs  piece_worker.rs
(+6 files in other folders)
