[package]
name = "darkdm-host"
version = "1.0.0"
edition = "2021"
description = "DarkDM Native Messaging Host - bridges browser extension with the desktop app"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
ureq = "3"
url = "2"
