[package]
name = "darkdm-host"
version = "1.0.0"
edition = "2021"
description = "DarkDM Native Messaging Host - bridges browser extension with the desktop app"

[[bin]]
name = "darkdm-host"
path = "src/main.rs"

[[bin]]
name = "darkdm-proxy"
path = "src/bin/proxy.rs"

[[bin]]
name = "darkdm-proxy-mitm"
path = "src/bin/proxy_mitm.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
ureq = "3"
url = "2"
